--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ footer {
     width: 15%;
     height: 30%;
     margin-top: 2%;
-    margin-left: 5%;
+    margin-left: 2%;
     border-radius: 1em;
 }
 
@@ -197,6 +197,26 @@ footer {
     font-weight: bold;
     text-align: center;
 
+}
+
+/* Description */
+#description {
+    float: right;
+    background-color: #ffffff;
+    width: 15%;
+    height: 30%;
+    margin-top: 2%;
+    margin-left: 0%;
+    margin-right: 2%;
+    border-radius: 1em;
+}
+
+#description h1 {
+    text-align: center;
+}
+
+#description p {
+    margin-left: 5%;
 }
 
 /* News */
